# Mart_api_project

./: compose.yaml
inventory_ser/: .env  Dockerfile.dev  pyproject.toml
inventory_ser/app/: db.py  inventory.proto  inventory_pb2.py  main.py  model.py  product_model.py  schema.py
notification_ser/: .env  Dockerfile.dev  pyproject.toml
notification_ser/app/: main.py  model.py  notifi.proto  notifi_pb2.py  schema.py
order_ser/: .env  Dockerfile.dev  pyproject.toml
order_ser/app/: main.py  model.py  order.proto  order_pb2.py  schema.py
payment_ser/: .env  Dockerfile.dev  pyproject.toml
payment_ser/app/: db.py  main.py  model.py  payment.proto  payment_pb2.py  schema.py
product_ser/: .env  Dockerfile.dev  pyproject.toml
product_ser/app/: main.py  model.py  product.proto  product_pb2.py  schema.py  setting.py
user_ser/: .env  Dockerfile.dev  pyproject.toml
user_ser/app/: auth.py  db.py  main.py  model.py  schema.py  setting.py  user.proto  user_pb2.py
