[tool.poetry]
name = "notification"
version = "0.1.0"
description = ""
authors = ["ArsalanAyaz <henrykoff7788@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
psycopg = "^3.2.1"
sqlmodel = "^0.0.19"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
